Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-1034

MQTT processors doesn't work

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.6.0
    • 0.7.0
    • None

    Description

      Neither ConsumeMQTT nor PublishMQTT call AbstractMQTT::Initialize, leaving the member called "sslEnabled_" uninitialized. 

      Which means we try to connect securely or plain tcp based on memory garbage. 

      Attachments

        Issue Links

          Activity

            People

              aboda Arpad Boda
              aboda Arpad Boda
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 40m
                  1h 40m