MINIFICPP-1034 - MQTT processors doesnt work