extensions/mqtt/processors/AbstractMQTTProcessor.cpp
@@ -46,32 +46,15 @@ core::Property AbstractMQTTProcessor::SecurityCA("Security CA", "File or directo
 core::Property AbstractMQTTProcessor::SecurityCert("Security Cert", "Path to client's public key (PEM) used for authentication", "");
 core::Property AbstractMQTTProcessor::SecurityPrivateKey("Security Private Key", "Path to client's private key (PEM) used for authentication", "");
 core::Property AbstractMQTTProcessor::SecurityPrivateKeyPassWord("Security Pass Phrase", "Private key passphrase", "");
-core::Relationship AbstractMQTTProcessor::Success("success", "FlowFiles that are sent successfully to the destination are transferred to this relationship");
-core::Relationship AbstractMQTTProcessor::Failure("failure", "FlowFiles that failed to send to the destination are transferred to this relationship");
 
-void AbstractMQTTProcessor::initialize() {
-  // Set the supported properties
-  std::set<core::Property> properties;
-  properties.insert(BrokerURL);
-  properties.insert(CleanSession);
-  properties.insert(ClientID);
-  properties.insert(UserName);
-  properties.insert(PassWord);
-  properties.insert(KeepLiveInterval);
-  properties.insert(ConnectionTimeOut);
-  properties.insert(QOS);
-  properties.insert(Topic);
-  setSupportedProperties(properties);
-  // Set the supported relationships
-  std::set<core::Relationship> relationships;
-  relationships.insert(Success);
-  relationships.insert(Failure);
-  setSupportedRelationships(relationships);
-  MQTTClient_SSLOptions sslopts_ = MQTTClient_SSLOptions_initializer;
-  sslEnabled_ = false;
+const std::set<core::Property> AbstractMQTTProcessor::getSupportedProperties() {
+  return {BrokerURL, CleanSession, ClientID, UserName, PassWord, KeepLiveInterval, ConnectionTimeOut, QOS, Topic};
 }
 
-void AbstractMQTTProcessor::onSchedule(core::ProcessContext *context, core::ProcessSessionFactory *sessionFactory) {
+void AbstractMQTTProcessor::onSchedule(const std::shared_ptr<core::ProcessContext> &context, const std::shared_ptr<core::ProcessSessionFactory> &factory) {
+  sslEnabled_ = false;
+  sslopts_ = MQTTClient_SSLOptions_initializer;
+
   std::string value;
   int64_t valInt;
   value = "";
@@ -131,7 +114,6 @@ void AbstractMQTTProcessor::onSchedule(core::ProcessContext *context, core::Proc
   if (context->getProperty(SecurityProtocol.getName(), value) && !value.empty()) {
     if (value == MQTT_SECURITY_PROTOCOL_SSL) {
       sslEnabled_ = true;
-      logger_->log_debug("AbstractMQTTProcessor: ssl enable");
       value = "";
       if (context->getProperty(SecurityCA.getName(), value) && !value.empty()) {
         logger_->log_debug("AbstractMQTTProcessor: trustStore [%s]", value);
@@ -180,14 +162,21 @@ bool AbstractMQTTProcessor::reconnect() {
     conn_opts.username = userName_.c_str();
     conn_opts.password = passWord_.c_str();
   }
-  if (sslEnabled_)
+  if (sslEnabled_) {
     conn_opts.ssl = &sslopts_;
-  if (MQTTClient_connect(client_, &conn_opts) != MQTTCLIENT_SUCCESS) {
-    logger_->log_error("Failed to connect to MQTT broker %s", uri_);
+  }
+  int ret = MQTTClient_connect(client_, &conn_opts);
+  if (ret != MQTTCLIENT_SUCCESS) {
+    logger_->log_error("Failed to connect to MQTT broker %s (%d)", uri_, ret);
     return false;
   }
   if (isSubscriber_) {
-    MQTTClient_subscribe(client_, topic_.c_str(), qos_);
+    ret = MQTTClient_subscribe(client_, topic_.c_str(), qos_);
+    if(ret != MQTTCLIENT_SUCCESS) {
+      logger_->log_error("Failed to subscribe to MQTT topic %s (%d)", topic_, ret);
+      return false;
+    }
+    logger_->log_debug("Successfully subscribed to MQTT topic: %s", topic_);
   }
   return true;
 }
