extensions/mqtt/processors/PublishMQTT.h
@@ -58,6 +58,9 @@ class PublishMQTT : public processors::AbstractMQTTProcessor {
   static core::Property Retain;
   static core::Property MaxFlowSegSize;
 
+  static core::Relationship Failure;
+  static core::Relationship Success;
+
   // Nest Callback Class for read stream
   class ReadCallback : public InputStreamCallback {
    public:
@@ -123,11 +126,11 @@ class PublishMQTT : public processors::AbstractMQTTProcessor {
    * @param sessionFactory process session factory that is used when creating
    * ProcessSession objects.
    */
-  void onSchedule(core::ProcessContext *context, core::ProcessSessionFactory *sessionFactory);
+  void onSchedule(const std::shared_ptr<core::ProcessContext> &context, const std::shared_ptr<core::ProcessSessionFactory> &factory) override;
   // OnTrigger method, implemented by NiFi PublishMQTT
-  virtual void onTrigger(const std::shared_ptr<core::ProcessContext> &context, const std::shared_ptr<core::ProcessSession> &session);
+  void onTrigger(const std::shared_ptr<core::ProcessContext> &context, const std::shared_ptr<core::ProcessSession> &session) override;
   // Initialize, over write by NiFi PublishMQTT
-  virtual void initialize(void);
+  void initialize(void) override;
 
  protected:
 
